kubernetes/clusters/cluster-104/network/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: network
  labels:
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
